# rose-script-actuator

./: .gitignore  README.md  build.bat  clear.bat  config.yaml  install.bat  pyproject.toml  run.bat
.github/workflows/: python-build.yml
actuator/: __main__.py  config.py  consts.py  log.py  model.py
actuator/base/: __init__.py  device.py  execute.py
actuator/devices/: __init__.py
actuator/devices/adb/: __init__.py  devices.py  execute.py
actuator/devices/web/: __init__.py  devices.py  execute.py
actuator/devices/windows/: __init__.py  devices.py  execute.py
actuator/example/: test.lua
actuator/run_script/: __init__.py  exec_lua.py
actuator/run_script/old/: __init__.py  model.py
actuator/tui/: __init__.py  device.py  home.py  logview.py  page.py  run.py
actuator/utils/: file.py  method.py
actuator/utils/image/: __init__.py  image_ocr.py  tempate_matching.py
actuator/utils/requests/: __init__.py  user_agent.py  utils.py
doc/: Requests 网络请求.md  lua 基本库.md
tests/: test_image_ocr.py  test_tempate_matching.py  test_utils_method.py
